# 1111111

./: BUILD_VST3.bat  CMakeLists.txt  GITHUB_ACTIONS_BUILD.md  NOTICES.md  README.md  build-vst3.yml
.github/workflows/: build-vst3.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
